# tiny

tinyrenderer/: CMakeLists.txt  main.cpp  model.cpp
tinyrenderer/.cache/clangd/index/: geometry.h.9B0369976F57EF2D.idx  main.cpp.AF6D85A4FFA3F570.idx  tgaimage.cpp.1F0E1D1061D43B5C.idx  tgaimage.h.1C14FEB773A04936.idx
